--- a/web-variables.env
+++ b/web-variables.env
@@ -11,3 +11,5 @@ DB_ENV_POSTGRES_USER=skyfolk
 DB_ENV_POSTGRES_PASSWORD=skyfolk_password
 DB_PORT_5432_TCP_ADDR=dbpostgres
 DB_PORT_5432_TCP_PORT=5432
+TWITTER_CONSUMER_TOKEN=ZCYQAHEotpXv8YvGBUoH44UVa
+TWITTER_CONSUMER_SECRET=lew1qe3oiDC8pkIYVCm2uZR17nKreUBcGt97uaUOMBbunvDFWz
