--- a/web-variables.env
+++ b/web-variables.env
@@ -13,3 +13,5 @@ DB_PORT_5432_TCP_ADDR=dbpostgres
 DB_PORT_5432_TCP_PORT=5432
 TWITTER_CONSUMER_TOKEN=ZCYQAHEotpXv8YvGBUoH44UVa
 TWITTER_CONSUMER_SECRET=lew1qe3oiDC8pkIYVCm2uZR17nKreUBcGt97uaUOMBbunvDFWz
+INSTAGRAM_CLIENT_ID=dec537046acd40ea8c5365d36a8ee7a3
+INSTAGRAM_CLIENT_SECRET=ab13542b945e44828c597a1ef42ccf39
