--- a/deployment/k8s/rabbit-service.yaml
+++ b/deployment/k8s/rabbit-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f deployment/master/docker-compose.yml -o deployment/master/k8s/
-    kompose.version: 1.16.0 (0c01309)
+    kompose.cmd: kompose convert -f deployment/master/docker-compose.yml -o deployment/master/k8s
+    kompose.version: 1.18.0 (06a2e56)
   creationTimestamp: null
   labels:
     io.kompose.service: rabbit
