--- a/deployment/k8s/webworker-env-web-env-configmap.yaml
+++ b/deployment/k8s/webworker-env-web-env-configmap.yaml
@@ -6,12 +6,7 @@ data:
   DB_PORT_5432_TCP_ADDR: 35.198.141.4
   DB_PORT_5432_TCP_PORT: "5432"
   DJANGO_SETTINGS_MODULE: skyfolk.settings.master
-  ELASTICSEARCH_URL: cluster
   EMAIL_HOST: cluster
-  NEO4J_BOLT_URL: bolt://neo4j:1518@cluster:7687
-  NEO4J_HOST: cluster
-  NEO4J_PASSWORD: "1518"
-  NEO4J_USER: neo4j
   RABBIT_PORT_5672_TCP: rabbit
   REDIS_PORT_6379_TCP_ADDR: redis
   SECRET_KEY: z_v9kx(!^1bqmedpn65t#*4t=6(0*17co+$%f!0vtug19xic()
@@ -19,5 +14,5 @@ kind: ConfigMap
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: web-env-web-env
-  name: web-env-web-env
+    io.kompose.service: webworker-env-web-env
+  name: webworker-env-web-env
